// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GifExpertApp tests debe mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCattegory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="The office"
      key="The office"
    />
    <GifGrid
      category="Brooklyn 99"
      key="Brooklyn 99"
    />
  </ol>
</Fragment>
`;

exports[`GifExpertApp tests snapshot 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCattegory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
  </ol>
</Fragment>
`;
